--- a/app/src/main/res/layout/sleep_info_item_layout.xml
+++ b/app/src/main/res/layout/sleep_info_item_layout.xml
@@ -1,64 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
             name="sleepInfo"
             type="com.example.sleeplogger.database.SleepInfo" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/dateTv"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginBottom="8dp"
-            android:text="@{sleepInfo.dateRecorded}"
-            app:layout_constraintBottom_toTopOf="@+id/sleepDurationTv"
-            app:layout_constraintStart_toStartOf="parent"></TextView>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/sleepDurationTv"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/dateTextDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="36dp"
+                android:layout_marginBottom="12dp"
+                android:text="@string/date_tv"
+                android:textStyle="bold"></TextView>
+
+            <TextView
+                android:id="@+id/dateTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="128dp"
+                android:layout_marginBottom="12dp"></TextView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginBottom="12dp"
-            android:text="Sleep Duration"
-            app:layout_constraintBottom_toTopOf="@+id/ratingTv"
-            app:layout_constraintStart_toStartOf="parent"></TextView>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/ratingTv"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/sleepDurationTextDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="36dp"
+                android:layout_marginBottom="12dp"
+                android:text="@string/sleep_duration_tv"
+                android:textStyle="bold" ></TextView>
+
+            <TextView
+                android:id="@+id/sleepDurationTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="64dp"
+                android:layout_marginBottom="12dp"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:text="Rating"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="67dp"></TextView>
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/modifyButton"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/ratingTextDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="36dp"
+                android:text="@string/sleep_quality_tv"
+                android:textStyle="bold" ></TextView>
+
+            <TextView
+                android:id="@+id/ratingTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="75dp"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
-            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_edit" />
+            android:orientation="horizontal" >
 
-        <ImageButton
-            android:id="@+id/deleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
+            <ImageButton
+                android:id="@+id/modifyButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginStart="84dp"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageButton
+                android:id="@+id/deleteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="48dp"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+        </LinearLayout>
+    </LinearLayout>
 </layout>
