add modify and delete button

--- a/app/src/main/res/layout/fragment_all_sleep_info.xml
+++ b/app/src/main/res/layout/fragment_all_sleep_info.xml
@@ -9,22 +9,47 @@
             type="com.example.sleeplogger.allSleepInfoScreen.AllSleepInfoViewModel" />
     </data>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <Button
+            android:id="@+id/addButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:padding="10dp"
+            android:text="Add new log" />
+
+        <TextView
+            android:id="@+id/allSleepLogsTv"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            tools:context=".allSleepInfoScreen.AllSleepInfoFragment">
+            android:layout_height="wrap_content"
+            android:text="All Sleep Logs"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:padding="10dp"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/sleepLogsRv"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                tools:context=".allSleepInfoScreen.AllSleepInfoFragment">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/sleepLogsRv"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+    </LinearLayout>
 </layout>
