--- a/app/src/main/res/layout/sleep_info_item_layout.xml
+++ b/app/src/main/res/layout/sleep_info_item_layout.xml
@@ -7,100 +7,90 @@
         <variable
             name="sleepInfo"
             type="com.example.sleeplogger.database.SleepInfo" />
+        <!--<variable
+            name="clickListener"
+            type="com.example.sleeplogger.allSleepInfoScreen.LogListener"--> />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="10dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_weight="4">
 
-            <TextView
-                android:id="@+id/dateTextDisplay"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:layout_marginBottom="12dp"
-                android:text="@string/date_tv"
-                android:textStyle="bold"></TextView>
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/dateTv"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/dateTextDisplay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginBottom="12dp"
+                    android:text="@string/date_tv"
+                    android:textStyle="bold"></TextView>
+
+                <TextView
+                    android:id="@+id/dateTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="128dp"
+                    android:layout_marginBottom="12dp"></TextView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="128dp"
-                android:layout_marginBottom="12dp"></TextView>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/sleepDurationTextDisplay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginBottom="12dp"
+                    android:text="@string/sleep_duration_tv"
+                    android:textStyle="bold" ></TextView>
+
+                <TextView
+                    android:id="@+id/sleepDurationTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="64dp"
+                    android:layout_marginBottom="12dp"></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/ratingTextDisplay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:text="@string/sleep_quality_tv"
+                    android:textStyle="bold" ></TextView>
+
+                <TextView
+                    android:id="@+id/ratingTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="75dp"></TextView>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/sleepDurationTextDisplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:layout_marginBottom="12dp"
-                android:text="@string/sleep_duration_tv"
-                android:textStyle="bold" ></TextView>
-
-            <TextView
-                android:id="@+id/sleepDurationTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
-                android:layout_marginBottom="12dp"></TextView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/ratingTextDisplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:text="@string/sleep_quality_tv"
-                android:textStyle="bold" ></TextView>
-
-            <TextView
-                android:id="@+id/ratingTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="75dp"></TextView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <ImageButton
-                android:id="@+id/modifyButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginStart="84dp"
-                app:srcCompat="@android:drawable/ic_menu_edit" />
-
-            <ImageButton
-                android:id="@+id/deleteButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="48dp"
-                app:srcCompat="@android:drawable/ic_menu_delete" />
-        </LinearLayout>
     </LinearLayout>
 </layout>
