--- a/app/src/main/res/layout/fragment_sleep_details.xml
+++ b/app/src/main/res/layout/fragment_sleep_details.xml
@@ -13,7 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp">
 
 
         <LinearLayout
@@ -25,9 +28,10 @@
                     android:id="@+id/dateTextDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="12dp"
                     android:layout_marginBottom="12dp"
                     android:text="@string/date_tv"
+                    android:textSize="20sp"
                     android:textStyle="bold"></TextView>
 
                 <TextView
@@ -35,7 +39,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="128dp"
-                    android:layout_marginBottom="12dp"></TextView>
+                    android:layout_marginBottom="12dp"
+                    android:textSize="20sp"></TextView>
 
             </LinearLayout>
 
@@ -48,17 +53,19 @@
                     android:id="@+id/sleepDurationTextDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="12dp"
                     android:layout_marginBottom="12dp"
                     android:text="@string/sleep_duration_tv"
+                    android:textSize="20sp"
                     android:textStyle="bold" ></TextView>
 
                 <TextView
                     android:id="@+id/sleepDurationTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="64dp"
-                    android:layout_marginBottom="12dp"></TextView>
+                    android:layout_marginStart="38dp"
+                    android:layout_marginBottom="12dp"
+                    android:textSize="20sp" ></TextView>
             </LinearLayout>
 
         <LinearLayout
@@ -70,15 +77,17 @@
                     android:id="@+id/ratingTextDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="12dp"
                     android:text="@string/sleep_quality_tv"
+                    android:textSize="20sp"
                     android:textStyle="bold" ></TextView>
 
                 <TextView
                     android:id="@+id/ratingTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="75dp"></TextView>
+                    android:layout_marginStart="53dp"
+                    android:textSize="20sp" ></TextView>
 
             </LinearLayout>
 
@@ -87,7 +96,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:layout_marginTop="30dp">
 
             <ImageButton
                 android:id="@+id/modifyButton"
