--- a/app/src/main/res/layout/sleep_info_item_layout.xml
+++ b/app/src/main/res/layout/sleep_info_item_layout.xml
@@ -7,16 +7,16 @@
         <variable
             name="sleepInfo"
             type="com.example.sleeplogger.database.SleepInfo" />
-        <!--<variable
-            name="clickListener"
-            type="com.example.sleeplogger.allSleepInfoScreen.LogListener"--> />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:background="@drawable/line_divider"
+        android:backgroundTint="#F7F7F7"
+        android:padding="10dp"
+        android:layout_margin="3dp">
 
         <LinearLayout
             android:layout_width="350dp"
